--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - QR Code Generator</title>
+  <title>QR Code Generator</title>
   <link rel="stylesheet" href="./style.css">
+  <link rel="icon" href="./qr.svg" >
 
 </head>
 <body>
